--- a/src/scss/pages/informations/about/_experience.scss
+++ b/src/scss/pages/informations/about/_experience.scss
@@ -23,6 +23,7 @@
 	  font-style: normal;
 	  font-family: $font-secondary;
 	  margin-bottom: 2rem;
+	  z-index: 1;
 	}
 
 	&__title, &__subtitle {
